--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.9",
+    "antd": "^5.2.2",
     "graphql": "^16.6.0",
     "umi": "^4.0.52"
   },
